Bug 569174: [Toolsmiths] Papyrus integration of GMF Tooling - Sequence diagram code regeneration
Sequence diagram code regeneration after genextension migration
+ Fix cleanup
+ organize immport
+ L1.2 Fix border node after cleanup code

Change-Id: If007ee43311c077eec452d3d8beda5d9ead89197
Signed-off-by: Etienne Allogo <etienne.allogo@artal.fr>
Signed-off-by: Vincent Lorenzo <vincent.lorenzo@cea.fr>